--- a/CodepathTindr/Base.lproj/Main.storyboard
+++ b/CodepathTindr/Base.lproj/Main.storyboard
@@ -25,19 +25,23 @@
                                 <rect key="frame" x="8" y="72" width="304" height="304"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="gLu-kV-nNj" appends="YES" id="1Pk-bi-dJc"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="panGestureRecognizer" destination="43B-rb-N6J" id="07E-X3-PVO"/>
+                        <outlet property="avatar" destination="nbC-ge-1LG" id="pEP-Jp-ZNF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="43B-rb-N6J">
+                <panGestureRecognizer minimumNumberOfTouches="1" id="gLu-kV-nNj">
                     <connections>
-                        <action selector="onPanGesture:" destination="BYZ-38-t0r" id="jlH-Wm-y26"/>
+                        <action selector="onPanGesture:" destination="BYZ-38-t0r" id="bbB-7g-1Dx"/>
                     </connections>
                 </panGestureRecognizer>
             </objects>
